--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
       <div class="organizers">
 
         <div class="organizer">
-          <img src="../images/ana_cropped.jpeg" alt="Organiser Picture">
+          <img src="./images/ana_cropped.jpeg" alt="Organiser Picture">
           <h3>Anastasia Istratuca</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>University of Edinburgh</p>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/Pearson_MAC-MIGS.jpg" alt="Organiser Picture">
+          <img src="./images/Pearson_MAC-MIGS.jpg" alt="Organiser Picture">
           <h3>Prof John Pearson</h3>
           <p>Professor in the School of Mathematics</p>
           <p>University of Edinburgh</p>        
@@ -71,7 +71,7 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/ateckentrup2.jpg" alt="Organiser Picture">
+          <img src="./images/ateckentrup2.jpg" alt="Organiser Picture">
           <h3>Dr Aretha Teckentrup</h3>
           <p>Reader in the School of Mathematics</p>
           <p>University of Edinburgh</p>        
@@ -79,14 +79,14 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/simon2.jpg" alt="Organiser Picture">
+          <img src="./images/simon2.jpg" alt="Organiser Picture">
           <h3>Simon Urbainczyk</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>Heriot-Watt University</p>        
         </div>
 
         <div class="organizer">
-          <img src="../images/chr.jpg" alt="Organiser Picture">
+          <img src="./images/chr.jpg" alt="Organiser Picture">
           <h3>Christian Jimenez Beltran</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>University of Edinburgh</p>        
@@ -103,21 +103,21 @@
       <div class="sponsors">
         <a href="https://www.mac-migs.ac.uk/" target="_blank">
           <div class="sponsor">
-            <img src="../images/MAC-MIGS.png" alt="MAC-MIGS Logo">
+            <img src="./images/MAC-MIGS.png" alt="MAC-MIGS Logo">
              <!--<h3>MAC-MIGS</h3>-->
           </div>
         </a>
 
         <a href="https://www.gmjtrust.org/home" target="_blank">
           <div class="sponsor">
-            <img src="../images/GMJT.jpg" alt="GMJT Logo">
+            <img src="./images/GMJT.jpg" alt="GMJT Logo">
             <!-- <h3>GMJT</h3>-->
           </div>
         </a>
 
         <a href="https://www.probai.uk/" target="_blank">
           <div class="sponsor">
-            <img src="../images/probai.png" alt="ProbAI Logo">
+            <img src="./images/probai.png" alt="ProbAI Logo">
              <!--<h3>ProbAI</h3>-->
           </div>
         </a>
@@ -126,21 +126,21 @@
       <div class="sponsors">
         <a href="https://heilbronn.ac.uk/" target="_blank">
           <div class="sponsor">
-            <img src="../images/Heilbronn-Landscape-Logo_100.png" alt="heilbronn Logo">
+            <img src="./images/Heilbronn-Landscape-Logo_100.png" alt="heilbronn Logo">
             <!-- <h3>Heilbronn Institute</h3>-->
           </div>
         </a>
 
         <a href="https://www.ukri.org/" target="_blank">
           <div class="sponsor">
-            <img src="../images/UKRI.png" alt="Heilbronn Logo">
+            <img src="./images/UKRI.png" alt="Heilbronn Logo">
              <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
 
         <a href="https://www.ems.ac.uk/" target="_blank">
           <div class="sponsor">
-            <img src="../images/ems-logo.svg" alt="EMS Logo">
+            <img src="./images/ems-logo.svg" alt="EMS Logo">
              <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
