--- a/summer_school.html
+++ b/summer_school.html
@@ -41,7 +41,7 @@
           </p>
         </div>
         <div class="building">
-          <img src="../images/jcmb.jpg" alt="James Clerk Maxwell Building">
+          <img src="./images/jcmb.jpg" alt="James Clerk Maxwell Building">
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
 
         <a href="https://research.lut.fi/converis/portal/detail/Person/121843" target="_blank">
           <div class="speaker">
-            <img src="../images/Heikki-Haario.jpg" alt="Speaker 2">
+            <img src="./images/Heikki-Haario.jpg" alt="Speaker 2">
             <h3>Prof. Heikki Haario</h3>
             <h3>LUT University</h3>
             <p>Topic: Data Assimilation</p>
@@ -64,7 +64,7 @@
 
         <a href="https://scoop.iwr.uni-heidelberg.de/team/rherzog/" target="_blank">
           <div class="speaker">
-            <img src="../images/roland.jpg" alt="Speaker 2">
+            <img src="./images/roland.jpg" alt="Speaker 2">
             <h3>Prof. Roland Herzog</h3>
             <h3>University of Heidelberg</h3>
             <p>Topic: PDE-Constrained Optimization</p>
@@ -74,7 +74,7 @@
         <!--<a href="https://scoop.iwr.uni-heidelberg.de/team/eloayza/" target="_blank">-->
         <a href=" https://pureportal.strath.ac.uk/en/persons/karen-estefania-loayza-romero" target="_blank">
           <div class="speaker">
-            <img src="../images/estefanial.jpg" alt="Speaker 2">
+            <img src="./images/estefanial.jpg" alt="Speaker 2">
             <h3>Dr. Estefania Loayza R.</h3>
             <h3>University of Strathclyde</h3>
             <p>Topic: PDE-Constrained Optimization</p>
@@ -83,7 +83,7 @@
 
         <a href="https://personalpages.manchester.ac.uk/staff/Catherine.Powell/" target="_blank">
           <div class="speaker">
-            <img src="../images/catherine.jpg" alt="Speaker 1">
+            <img src="./images/catherine.jpg" alt="Speaker 1">
             <h3>Prof. Catherine Powell</h3>
             <h3>University of Manchester</h3>
             <p>Topic: High-Dimensional PDEs</p>
@@ -92,7 +92,7 @@
 
         <a href="https://alisonramage.github.io/" target="_blank">
           <div class="speaker">
-            <img src="../images/Alison_small.jpeg" alt="Speaker 1">
+            <img src="./images/Alison_small.jpeg" alt="Speaker 1">
             <h3>Dr. Alison Ramage</h3>
             <h3>University of Strathclyde</h3>
             <p>Topic: High-Dimensional PDEs</p>
@@ -101,7 +101,7 @@
 
         <a href="http://stuart.caltech.edu/" target="_blank">
           <div class="speaker">
-            <img src="../images/stuart-lg.jpg" alt="Speaker 2">
+            <img src="./images/stuart-lg.jpg" alt="Speaker 2">
             <h3>Prof. Andrew Stuart</h3>
             <h3>Caltech</h3>
             <p>Topic: Scientific ML</p>
@@ -110,7 +110,7 @@
 
         <a href="http://nolovedeeplearning.com/" target="_blank">
           <div class="speaker">
-            <img src="../images/antonio.jpg" alt="Speaker 2">
+            <img src="./images/antonio.jpg" alt="Speaker 2">
             <h3>Dr. Antonio Vergari</h3>
             <h3>University of Edinburgh</h3>
             <p>Topic: Scientific ML</p>
@@ -120,7 +120,7 @@
         <!--<a href="http://dewiljes-lab.com/" target="_blank">-->
         <a href="https://www.tu-ilmenau.de/en/universitaet/fakultaeten/fakultaet-mathematik-und-naturwissenschaften/profil/institute-und-fachgebiete/institut-fuer-mathematik/profil/fachgebiet-mathematics-of-data-science/team/prof-dr-jana-de-wiljes" target="_blank">
           <div class="speaker">
-            <img src="../images/jana.jpg" alt="Speaker 2">
+            <img src="./images/jana.jpg" alt="Speaker 2">
             <h3>Prof. Jana de Wiljes</h3>
             <h3>TU Ilmenau</h3>
             <p>Topic: Data Assimilation</p>
