--- a/information.html
+++ b/information.html
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="about.html">About</a></li>
+      <li><a href="index.html">About</a></li>
       <li><a href="summer_school.html">Summer School</a></li>
       <li><a href="register.html">Registration</a></li>
       <li><a href="contact.html">Contact</a></li>
