position alison's picture, fix schedule

--- a/summer_school.html
+++ b/summer_school.html
@@ -92,7 +92,7 @@
 
         <a href="https://alisonramage.github.io/" target="_blank">
           <div class="speaker">
-            <img src="./images/Alison_small.jpeg" alt="Speaker 1">
+            <img src="./images/Alison_cropped.jpeg" alt="Speaker 1">
             <h3>Dr. Alison Ramage</h3>
             <h3>University of Strathclyde</h3>
             <p>Topic: High-Dimensional PDEs</p>
@@ -169,7 +169,9 @@
           <tr>
             <td>10:30 - 11:00</td>
             <td>Welcome Remarks</td>
-            <td colspan="3">Coffee Break</td>
+            <td colspan="1">Coffee Break</td>
+            <td colspan="1">Coffee Break</td>
+            <td colspan="1">Coffee Break</td>
           </tr>
           <tr>
             <td>11:00 - 12:00</td>
@@ -197,7 +199,9 @@
 
           <tr>
             <td>15:00 - 15:30</td>
-            <td colspan="3">Coffee Break</td>
+            <td colspan="1">Coffee Break</td>
+            <td>-</td>
+            <td colspan="1">Coffee Break</td>
             <td>Closing Remarks</td>
           </tr>
 
