--- a/register.html
+++ b/register.html
@@ -29,8 +29,8 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Travel and childcare support</h2>
-      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you must be an early-career researcher, and affiliated with an institution in the UK or the EU, and give a talk or present a poster at the summer school.
-      To apply, please indicate your interest during registration and send your CV and a short motivation statement to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
+      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you must be an early-career researcher, affiliated with an institution in the UK or the EU, and be willing to give a talk or present a poster at the summer school.
+      To apply for travel support, please indicate your interest during registration and send your CV and a short motivation statement including an overview of your travel costs to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
       <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
       <h2>Registration</h2>
@@ -42,11 +42,11 @@
           </a>
         </div>
       </p>
-      <p style="font-size: 1.2em;"><b>The deadline for general registration is May 2, 2025, and the deadline to be considered for travel support is April 4, 2025.</b></p>
+      <p style="font-size: 1.2em;"><b>The deadline for general registration is May 2, 2025, and the deadline for being considered for travel support is April 4, 2025.</b></p>
 
       
       <h2>Conference dinner</h2>
-      <p>While lunch is provided by the summer school, the conference dinner is not covered by registration fees. We anticipate the cost to attend to be £40-£50 (TBC).</p>
+      <p>While lunch is provided by the summer school, the conference dinner is not covered. We anticipate the cost to attend to be £40-£50 (TBC).</p>
     </div>
   </section>
 
