--- a/information.html
+++ b/information.html
@@ -60,7 +60,7 @@
 
         </div>
         
-        <div id="map" style="width: 500px; height: 500px;"></div>
+        <div id="map" style="width: 50%; height: 500px;"></div>
       </div>
     </div>
   </section>
@@ -102,7 +102,7 @@
 </body>
 
 <script>
-  var map = L.map('map').setView([55.9216819,-3.1736698], 11);
+  var map = L.map('map').setView([55.9216819,-3.1736698], 11.5);
 
   L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
