--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <!-- Navigation Bar -->
   <nav class="navbar">
+      <!-- Removed the logo div -->
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">☰</label>
+
     <ul class="nav-links">
       <li><a href="index.html">About</a></li>
       <li><a href="summer_school.html">Summer School</a></li>
