--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <!-- Navigation Bar -->
   <nav class="navbar">
-      <!-- Removed the logo div -->
-    <input type="checkbox" id="menu-toggle">
+    <!-- Menu Toggle for Mobile -->
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
     <label for="menu-toggle" class="menu-icon">☰</label>
 
     <ul class="nav-links">
