--- a/summer_school.html
+++ b/summer_school.html
@@ -139,6 +139,7 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Schedule</h2>
+      <div class="schedule-table-container">
       <table class="schedule-table">
        
         <thead>
@@ -226,6 +227,7 @@
           </tr>
         </tbody>
       </table>
+    </div>
     </div>
   </section>
 
