--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
           </a>
         </div>
       </p>
-      <p style="font-size: 1.2em;"><b>The deadline for general registration is May 2, 2025, and the deadline for being considered for travel support is April 4, 2025.</b></p>
+      <p style="font-size: 1.2em;"><b>The DEADLINE for general registration is May 2, 2025, and the DEADLINE for being considered for travel support is April 4, 2025.</b></p>
 
       
       <h2>Conference dinner</h2>
