--- a/information.html
+++ b/information.html
@@ -59,7 +59,7 @@
             <li>By train: The closest train station is Edinburgh Waverley in the city centre. From there, you can reach the campus by bus.</li>
             <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road. Turn left and follow until turning left again into Max Born Crescent. Follow until Peter Guthrie Tait Road.</li>
           </ul>
-        See also <a href="https://transport.ed.ac.uk/travelling-here/kings-buildings">https://transport.ed.ac.uk/travelling-here/kings-buildings</a> for transport information and a campus map.
+        See also <a href="https://transport.ed.ac.uk/travelling-here/kings-buildings" target="_blank">Travelling to the King's Buildings</a> for transport information and a campus map.
         </p>
 
         </div>
