--- a/information.html
+++ b/information.html
@@ -82,7 +82,7 @@
       <p>There are plenty of great options for dinner in the area, including:<br>Wee Greek Kitchen, Haldi, Salisbury Arms, Old Bell Inn, Matto Pizza, Korean BBQ, Verdo, Sofia's Lounge, Brass Monkey, and Leslie's Bar.
       </p>
       
-      <b>Tour around Edinburgh</b>
+      <b>Place to visit in Edinburgh</b>
       <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
       </p>
       <ul>
